Added extractor and transformer

--- a/.env
+++ b/.env
@@ -18,5 +18,8 @@ SQLITE_DB_PATH_TEST='./sqlite_to_postgres/db.sqlite'
 
 # ETL service
 ETL_DELAY=30
-ETL_DEFAULT_UPDATED_AT=2000-01-01 00:00:00.00000+00
+ETL_PAGE_SIZE=500
+ETL_DEFAULT_UPDATED_AT='2000-01-01 00:00:00.00000+00'
 ETL_STORAGE_FILE_PATH=../storage/storage.json
+ES_HOST='http://localhost:9200'
+ES_INDEX='movies'
