--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.2.5
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-split-settings==1.2.0
+elasticsearch==8.10.0
 eradicate==2.3.0
 flake8==5.0.4
 flake8-blind-except==0.2.1
