--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ stdlib-list==0.10.0
 typing_extensions==4.9.0
 uWSGI==2.0.24
 pydantic~=1.10.9
+pytest==8.0.0
 pip~=23.2
 zipp~=1.0.0
 toml~=0.10.2
