Added etl improvements

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEBUG=True
+DEBUG=False
 
 # movies service
 ALLOWED_HOSTS='localhost, 127.0.0.1, [::1]'
@@ -6,7 +6,7 @@ PAGINATE_BY=50
 SECRET_KEY='django-insecure-ae07r##56kn7*=ww-0db1+@1__7^sgq_jyqs2dyrl-oe%mvb-7'
 
 # postgres
-DB_HOST='localhost'
+DB_HOST='postgres'
 DB_NAME=movies_database
 DB_PASSWORD=123qwe
 DB_PORT=5432
@@ -20,6 +20,6 @@ SQLITE_DB_PATH_TEST='./sqlite_to_postgres/db.sqlite'
 ETL_DELAY=30
 ETL_PAGE_SIZE=500
 ETL_DEFAULT_UPDATED_AT='2000-01-01 00:00:00.00000+00'
-ETL_STORAGE_FILE_PATH=../storage/storage.json
-ES_HOST='http://localhost:9200'
+ETL_STORAGE_FILE_PATH=etl/storage/storage.json
+ES_HOST='http://elasticsearch:9200'
 ES_INDEX='movies'
