--- a/etl/requirements.txt
+++ b/etl/requirements.txt
@@ -1,9 +1,7 @@
 asgiref~=3.6.0
 attrs==23.2.0
 click==8.1.7
-Django==4.2.5
-django-cors-headers==4.3.1
-django-split-settings==1.2.0
+elasticsearch==8.10.0
 eradicate==2.3.0
 mccabe==0.7.0
 mr-proper==0.0.7
@@ -14,7 +12,6 @@ python-dotenv==1.0.1
 sqlparse==0.4.4
 stdlib-list==0.10.0
 typing_extensions==4.9.0
-uWSGI==2.0.24
 pydantic~=1.10.9
 pip~=23.2
 zipp~=1.0.0
