--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,11 +62,5 @@ services:
     env_file:
       - .env
     depends_on:
-      postgres:
-        condition: service_healthy
-      service:
-        condition: service_started
-      elasticsearch:
-        condition: service_started
-    ports:
-      - "5005:5005"
+      - postgres
+      - elasticsearch
