Added ETL for genres

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ DB_NAME=movies_database
 DB_PASSWORD=123qwe
 DB_PORT=5432
 DB_USER=app
+DB_SCHEME='content'
 
 # sqlite
 SQLITE_DB_PATH='db.sqlite'
